<resources>
    <string name="app_name">EzHotel</string>
    <string name="txtReservation">Reservation</string>
    <string name="txtReservationID">Reservation ID:</string>
    <string name="txtRoom">Room</string>
    <string name="txtHome">Home</string>
    <string name="txtStaff">Staff</string>
    <string name="txtPassword">Password</string>
    <string name="txtUserID">User ID</string>
    <string name="txtLogin">Login</string>
    <string name="txtLogout">Logout</string>
    <string name="txtAddReservation">Add Reservation</string>
    <string name="txtEditReserve">Edit Reservation</string>
    <string name="txtBrowseReserve">Reservation Record</string>
    <string name="txtCustName">Customer Name: </string>
    <string name="txtCustIC">Customer IC: </string>
    <string name="txtCustPhone">Customer Phone: </string>
    <string name="txtStaffID">Staff ID: </string>
    <string name="txtRoomType">Room Type: </string>
    <string name="txtReservationDate">Reservation Date: </string>
    <string name="txtCheckInDate">Check-In Date: </string>
    <string name="txtCheckOutDate">Check-Out Date: </string>
    <string name="txtStatus">Status: </string>
    <string name="txtPaymentDate">Payment DateTime: </string>
    <string name="txtPaymentAmount">Payment Amount: RM</string>
    <string name="txtEditNotice">Edit Notice Board</string>
    <string name="txtHotelNotice">
        Food catering service and lucky draw context will be held at dinner time 8.00p.m. on 31 / 8 / 2018, all the hotel staff are invited to attend.



    </string>

    <string-array name="roomType_arrays">
        <item>Family Room</item>
        <item>Deluxe Room</item>
        <item>Executive Suite Room</item>
        <item>VIP Room</item>
    </string-array>

    <string-array name="staff_arrays">
        <item>S001</item>
        <item>S002</item>
        <item>S003</item>
    </string-array>
    <string name="txtAnotherRoom">Add another room?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_reservation">Reservation Menu</string>
    <string name="title_activity_addReservation">Add Reservation</string>
    <string name="title_activity_editReservation">Edit Reservation</string>
    <string name="title_activity_reservationRecord">Reservation Record</string>
    <string name="title_activity_room">Room Menu</string>
    <string name="title_activity_staff">Staff Menu</string>
    <string name="title_activity_checkio">Check In And Check Out</string>
    <string name="title_activity_checki">Check In </string>
    <string name="title_activity_checko">Check Out </string>
    <string name="title_activity_payment">Payment</string>
    <string name="txtCheckIO"><![CDATA[Check In & Check Out]]></string>
    <string name="txtPayment">Payment</string>
    <string name="txtMakePayment">Make Payment</string>
    <string name="txtPaymentRecord">Payment Record</string>
    <string name="txtCheckIn">Check In</string>
    <string name="txtCheckOut">Check Out</string>
    <string name="txtWelcome">Welcome, Ryan!</string>
    <string name="txtChkInChkOutRecord"><![CDATA[Check In & Check Out Record]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
