<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tViewReservationID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtReservationID" />

    <TextView
        android:id="@+id/tViewCustName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCustName" />

    <TextView
        android:id="@+id/tViewCIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCustIC" />

    <TextView
        android:id="@+id/tViewCPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCustPhone" />

    <TextView
        android:id="@+id/tViewStaffID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtStaffID" />

    <TextView
        android:id="@+id/tViewRoomType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRoomType" />

    <TextView
        android:id="@+id/tViewReservationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtReservationDate" />

    <TextView
        android:id="@+id/tViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtStatus" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>